<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="login_activity_loginfail_text_both">El usuario o contraseña no son validos. Por favor intente nuevamente. </string>
    <string name="login_activity_loginfail_text_pwonly">Se ha ingresado una contraseña invalida o su usuario ha cambiado. Por favor ingrese nuevamente, usuario y contraseña.</string>
    <string name="login_activity_loginfail_text_pwmissing">Ingrese una contraseña.</string>
    <string name="drawer_open">Abrir menu</string>
    <string name="drawer_close">Cerrar menu</string>
    <string name="inm_sort_date_asc">Fecha (Mas antiguo)</string>
    <string name="inm_sort_date_desc">Fecha (Mas reciente)</string>
    <string name="add_comparendo_add_title">Agregar Comparendo</string>
    <string name="add_comparendo_edit_title">Editar Comparendo</string>
    <string name="add_button_save">Guardar</string>
    <string name="add_button_cancel">Cancelar</string>
    <string name="add_title_url">URL</string>
    <string name="add_title_description">Descripcion</string>

    <string name="comparendo_search_label">Comparendos</string>
    <string name="comparendo_search_hint">Fecha,Infraccion,Cedula</string>


    <string name="account_preferences_cat_title">Configuracíon general</string>
    <string name="account_preferences_key">ConfigurarCuenta</string>
    <string name="account_preferences_title">ConfigurarCuenta</string>
    <string name="account_preferences_summary">Configurar sincronizacion y notificaciones.</string>
    <string name="listar_inmovilizacion_title">Inmovilizaciones Móviles</string>
    <string name="inm_sincronizar">Sincronizar inmovilizaciones</string>
    <string name="inm_cerrar">Cerrar sesión</string>
    <string name="login_activity_ok_button">Iniciar sesión</string>
    <string name="login_activity_password_label">Contraseña</string>
    <string name="login_activity_username_label">Usuario</string>
    <string name="login_main_text">Secretaría de Educación y Cultura del Cauca\nSIGDUE</string>
    <string name="main_menu_titulo">Sistema de Inmovilización Móviles</string>
    <string name="main_search_description">Fecha, Infraccion, Cedula, Placa agente, Placa grua</string>
    <string name="main_search_hint">Fecha, Infraccion, Cedula, Placa agente</string>
    <string name="main_search_label">Comparendos</string>
    <string name="main_search_results_title">Buscar resultados</string>
    <string name="menu_search_title">Buscar</string>
    <string name="menu_settings_title">Configuracion</string>
    <string name="menu_sort_comparendo_title">Ordenar Comparendo</string>
    <string name="numCopiasDefault">1</string>
    <string name="opcion_menu_cerrar_sesion">Cerrar sesión</string>
    <string name="opcion_menu_comparendos">Comparendos</string>
    <string name="opcion_menu_configuracion">Configuración</string>
    <string name="opcion_menu_consultar_runt_personas">Consultar persona RUNT</string>
    <string name="opcion_menu_consultar_runt_vehiculos">Consultar vehículos RUNT</string>
    <string name="opcion_menu_consultar_simit">Consultas SIMIT</string>
    <string name="pref_cat_help_title">Ayuda</string>
    <string name="pref_cat_reading_title">Reading options</string>
    <string name="pref_cat_save_title">Almacenar configuracíon</string>
    <string name="pref_configuracion_impresora_title">Configuración impresora</string>
    <string name="pref_configuracion_servicios_title">Configuracíon general</string>
    <string name="pref_departamento_key">pref_departemento_key</string>
    <string name="pref_departamento_summary">Seleccione el departamento en el que esta ubicada la entidad</string>
    <string name="pref_departamento_title">Configuración departamento</string>
    <string name="pref_eslogan_key">pref_eslogan_key</string>
    <string name="pref_eslogan_summary">Introduzca el eslogan de la entidad</string>
    <string name="pref_eslogan_title">Configuración eslogan</string>
    <string name="pref_id_transito_key">pref_id_transito_key</string>
    <string name="pref_id_transito_summary">Configure el tránsito por defecto al que seran asociados los comparendos generados</string>
    <string name="pref_id_transito_title">Configuración tránsito</string>
    <string name="pref_logo_key">pref_logo_key</string>
    <string name="pref_logo_summary">Seleccione el logo de la entidad</string>
    <string name="pref_logo_title">Configuración logo</string>
    <string name="pref_macip_default">192.168.1.1</string>
    <string name="pref_macip_key">pref_macip_key</string>
    <string name="pref_macip_summary">Establezca dirección IP impresora</string>
    <string name="pref_macip_title">Dirección IP impresora</string>
    <string name="pref_municipio_key">pref_municipio_key</string>
    <string name="pref_municipio_summary">Seleccione el municipio en el que esta ubicada la entidad</string>
    <string name="pref_municipio_title">Configuración municipio</string>
    <string name="pref_nombre_transito_default">Nombre Tránsito</string>
    <string name="pref_nombre_transito_key">pref_nombre_transito_key</string>
    <string name="pref_nombre_transito_summary">Configure el nombre del tránsito</string>
    <string name="pref_nombre_transito_title">Nombre tránsito</string>
    <string name="pref_organismotransito_key">pref_organismotransito_key</string>
    <string name="pref_organismotransito_summary">Indique el organismo de transito a seleccionar por defecto al realizar comparendos</string>
    <string name="pref_organismotransito_title">Configuración organismo transito comparendos</string>
    <string name="pref_sincronizar_maestros_key">pref_sincronizar_maestros_key</string>
    <string name="pref_sincronizar_maestros_summary">Cargue los datos como: infracciones, infractores, vehiculos, etc. para poder usar la opción de comparendos.</string>
    <string name="pref_sincronizar_maestros_title">Sincronizar Maestros</string>
    <string name="pref_tiempo_sincronizacion_gps_default">0</string>
    <string name="pref_tiempo_sincronizacion_gps_key">pref_tiempo_sincronizacion_gps_key</string>
    <string name="pref_tiempo_sincronizacion_gps_summary">Establesca el tiempo de sincronización de su posición.</string>
    <string name="pref_tiempo_sincronizacion_gps_title">Frecuencia sincronización GPS</string>
    <string name="pref_timeout_default">120</string>
    <string name="pref_timeout_key">pref_timeout_key</string>
    <string name="pref_timeout_summary">Establezca el tiempo maximo para esperar respuesta de los servicios</string>
    <string name="pref_timeout_title">Tiempo conexion servicios</string>
    <string name="pref_tipodocumento_key">pref_tipodocumento_key</string>
    <string name="pref_tipodocumento_summary">Indique el tipo de documento a seleccionar por defecto al realizar comparendos</string>
    <string name="pref_tipodocumento_title">Configuracón tipo documento comparendos</string>
    <string name="pref_transito_title">Configuración tránsito</string>
    <string name="pref_url_accesoria">Establesca la URL a los servicios Accesorias</string>
    <string name="pref_url_accesoria_default">http://173.201.37.144:60208/ServiciosComparendosMovilesNuevos/ServiciosAccesoriasCompMovilesPort?wsdl</string>
    <string name="pref_url_accesoria_key">pref_url_accesoria_key</string>
    <string name="pref_url_accesoria_title">Servicio accesoria</string>
    <string name="pref_url_comp_consultas">Establezca la URL a los servicios Consulta Comparendos</string>
    <string name="pref_url_comp_consultas_default">http://173.201.37.144:60208/ServiciosComparendosMovilesNuevos/ServiciosGeneralesCompPort?wsdl</string>
    <string name="pref_url_comp_consultas_key">pref_url_comp_consultas_key</string>
    <string name="pref_url_comp_consultas_title">Servicio consulta comparendos</string>
    <string name="pref_url_comp_moviles">Establesca la URL a los servicios Moviles Comparendos</string>
    <string name="pref_url_comp_moviles_default">http://173.201.37.144:60208/ServiciosComparendosMovilesNuevos/ServiciosGeneralesCompMovilesPort?wsdl</string>
    <string name="pref_url_comp_moviles_key">pref_url_comp_moviles_key</string>
    <string name="pref_url_comp_moviles_title">Servicio moviles comparendos</string>
    <string name="pref_usar_impresora_wifi_bluetooth_key">pref_usar_impresora_wifi_bluetooth_key</string>
    <string name="pref_usar_impresora_wifi_bluetooth_summary_off">Usando impresora con conexión a wifi ó bluetooth.</string>
    <string name="pref_usar_impresora_wifi_bluetooth_summary_on">Usando impresora local.</string>
    <string name="pref_usar_impresora_wifi_bluetooth_switch_off">No</string>
    <string name="pref_usar_impresora_wifi_bluetooth_switch_on">Si</string>
    <string name="pref_usar_impresora_wifi_bluetooth_title">Usar impresora local.</string>
    <string name="pref_usar_wifi_key">pref_usar_wifi_key</string>
    <string name="pref_usar_wifi_summary_off">Usando conexión bluetooth para impresiones.</string>
    <string name="pref_usar_wifi_summary_on">Usando conexión WIFI para impresiones.</string>
    <string name="pref_usar_wifi_switch_off">No</string>
    <string name="pref_usar_wifi_switch_on">Si</string>
    <string name="pref_usar_wifi_title">Conexión a impresora</string>
    <string name="pref_usuario_key">pref_usuario_key</string>
    <string name="preferences_title">Configuracion</string>
    <string name="search_results_bookmark">Resultado SIGDUE</string>
    <string name="titleApp">SIGDUE</string>
    <string name="title_activity_add_comparendo">Agregar comparendo</string>
    <string name="ui_activity_authenticating">Autenticando usuario</string>
    <string name="ui_activity_sincronizando">Sincronizando maestros</string>
    <string name="ui_activity_sincronizando_summary">Espere un momento por favor...</string>
    <string name="ui_listar_inmovilizaciones">Listando información...</string>
    <string name="vacio" />
    <string name="inm_sincronizar_maestros">Sincronizar maestros</string>
    <string name="informacion_title">SIGDUE Móviles</string>
</resources>
