<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pindroid="http://schemas.android.com/apk/res-auto">
	<item 
		android:id="@+id/menu_sortbookmark" 
		android:title="@string/menu_sort_comparendo_title"
		android:icon="@drawable/ic_menu_sort"
		pindroid:showAsAction="ifRoom"
		android:orderInCategory="12">
		<menu>
			<item android:id="@+id/menu_inm_sort_date_asc" android:title="@string/inm_sort_date_asc" />
			<item android:id="@+id/menu_inm_sort_date_desc" android:title="@string/inm_sort_date_desc" />
			<item android:id="@+id/menu_inm_sincronizar_maestros" android:title="@string/inm_sincronizar_maestros" />
			<item android:id="@+id/menu_inm_sincronizar" android:title="@string/inm_sincronizar" />
			<item android:id="@+id/menu_inm_cerrar" android:title="@string/inm_cerrar" />
		</menu>
	</item>
</menu>
