<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@drawable/ic_main" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:maxLines="5"
                android:paddingLeft="10dp"
                android:text="@string/login_main_text"
                android:textColor="#ff3333"
                android:textSize="28sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_login"
            android:drawableLeft="@drawable/usuario_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_activity_username_label"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:textColor="#000000"
            android:textColorHint="#000000" />


        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_login"
            android:drawableLeft="@drawable/clave_icon"
            android:drawablePadding="10dp"
            android:hint="@string/login_activity_password_label"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLines="1"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#339933"
            android:textColor="#FFFFFF"
            android:onClick="handleLogin"
            android:text="@string/login_activity_ok_button"
             />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Versión 1.1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textColor="#339933"
            android:layout_marginTop="15dp"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>